--- a/src/com/ulatina/grupo5/vista/Ganancias_Admin_Empleado.form
+++ b/src/com/ulatina/grupo5/vista/Ganancias_Admin_Empleado.form
@@ -85,7 +85,7 @@
             <Component class="javax.swing.JLabel" name="jLabel1_Ganacias">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="2" name="D:\ULATINA\4 CUATRI\PROGRA 3\Proyecto\Images\ganancias.png"/>
+                  <Image iconType="3" name="/proyecto/images/ganancias.png"/>
                 </Property>
               </Properties>
             </Component>
