--- a/src/com/ulatina/grupo5/vista/Registro_Atracciones_Admin.form
+++ b/src/com/ulatina/grupo5/vista/Registro_Atracciones_Admin.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <NonVisualComponents>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
@@ -229,7 +229,7 @@
         <Component class="javax.swing.JButton" name="jButton_Agregar_Atrac_Registro_Users">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="D:\ULATINA\4 CUATRI\PROGRA 3\Proyecto\Images\agregar.png"/>
+              <Image iconType="3" name="/proyecto/images/agregar.png"/>
             </Property>
             <Property name="contentAreaFilled" type="boolean" value="false"/>
           </Properties>
@@ -240,7 +240,7 @@
         <Component class="javax.swing.JButton" name="jButton_volver_registro_atracciones_admin">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="D:\ULATINA\4 CUATRI\PROGRA 3\Proyecto\Images\previous1.png"/>
+              <Image iconType="3" name="/proyecto/images/previous1.png"/>
             </Property>
             <Property name="contentAreaFilled" type="boolean" value="false"/>
           </Properties>
@@ -362,7 +362,7 @@
         <Component class="javax.swing.JLabel" name="jLabel2">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="D:\ULATINA\4 CUATRI\PROGRA 3\Proyecto\Images\registrodeatrac.png"/>
+              <Image iconType="3" name="/proyecto/images/registrodeatrac.png"/>
             </Property>
           </Properties>
         </Component>
