--- a/src/com/ulatina/grupo5/vista/Registro_Usuarios_Admin.form
+++ b/src/com/ulatina/grupo5/vista/Registro_Usuarios_Admin.form
@@ -207,7 +207,7 @@
         <Component class="javax.swing.JButton" name="jButton_create_user">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="D:\ULATINA\4 CUATRI\PROGRA 3\Proyecto\Images\sign up.png"/>
+              <Image iconType="3" name="/proyecto/images/sign up.png"/>
             </Property>
             <Property name="contentAreaFilled" type="boolean" value="false"/>
           </Properties>
@@ -265,7 +265,7 @@
         <Component class="javax.swing.JButton" name="jButton_previous_register">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="D:\ULATINA\4 CUATRI\PROGRA 3\Proyecto\Images\previous1.png"/>
+              <Image iconType="3" name="/proyecto/images/previous1.png"/>
             </Property>
             <Property name="contentAreaFilled" type="boolean" value="false"/>
           </Properties>
@@ -304,7 +304,7 @@
         <Component class="javax.swing.JLabel" name="jLabel_registro_user">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="D:\ULATINA\4 CUATRI\PROGRA 3\Proyecto\Images\registrouser1.png"/>
+              <Image iconType="3" name="/proyecto/images/registrouser1.png"/>
             </Property>
           </Properties>
         </Component>
