--- a/src/com/ulatina/grupo5/vista/Seguimiento_De_Atracciones_Admin.form
+++ b/src/com/ulatina/grupo5/vista/Seguimiento_De_Atracciones_Admin.form
@@ -199,7 +199,7 @@
         <Component class="javax.swing.JButton" name="jButton_Agregar_Seguimiento_Atra_Admin">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="D:\ULATINA\4 CUATRI\PROGRA 3\Proyecto\Images\agregar.png"/>
+              <Image iconType="3" name="/proyecto/images/agregar.png"/>
             </Property>
             <Property name="contentAreaFilled" type="boolean" value="false"/>
           </Properties>
@@ -210,7 +210,7 @@
         <Component class="javax.swing.JButton" name="jButton_volver_seguimiento_atracciones_admin">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="D:\ULATINA\4 CUATRI\PROGRA 3\Proyecto\Images\previous1.png"/>
+              <Image iconType="3" name="/proyecto/images/previous1.png"/>
             </Property>
             <Property name="contentAreaFilled" type="boolean" value="false"/>
           </Properties>
@@ -302,7 +302,7 @@
         <Component class="javax.swing.JLabel" name="jLabel_Seguimiento_atrac">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="D:\ULATINA\4 CUATRI\PROGRA 3\Proyecto\Images\Seguimiento de atrac.png"/>
+              <Image iconType="3" name="/proyecto/images/Seguimiento de atrac.png"/>
             </Property>
           </Properties>
         </Component>
