--- a/src/com/ulatina/grupo5/vista/Registro_Atracciones_Admin.form
+++ b/src/com/ulatina/grupo5/vista/Registro_Atracciones_Admin.form
@@ -97,34 +97,34 @@
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="jButton_volver_registro_atracciones_admin" min="-2" max="-2" attributes="0"/>
+                          <Component id="btnVolver" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
-                          <Component id="jButton_Agregar_Atrac_Registro_Users" min="-2" max="-2" attributes="0"/>
+                          <Component id="btnAgregar" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="59" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="102" alignment="1" attributes="0">
-                                  <Component id="jSlider1_Capacidad_Regist_Atra_Admin" pref="261" max="32767" attributes="0"/>
+                                  <Component id="sldCapacidad" pref="261" max="32767" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
                               </Group>
-                              <Component id="jTextField_Nombre_Atraccion_Registro_Atrac_Admin" max="32767" attributes="0"/>
-                              <Component id="jTextField_Ident_Atrac_Regist_Atra_Admin" max="32767" attributes="0"/>
-                              <Component id="jDateChooser_Regist_Atra_Admin" alignment="0" max="32767" attributes="0"/>
-                              <Component id="jComboBox_Secc_Regist_Atra_Admin" max="32767" attributes="0"/>
+                              <Component id="txtNombreAtraccion" max="32767" attributes="0"/>
+                              <Component id="txtCodigoAtraccion" max="32767" attributes="0"/>
+                              <Component id="dtpFechaInstalacion" alignment="0" max="32767" attributes="0"/>
+                              <Component id="ddlSeccion" max="32767" attributes="0"/>
                               <Group type="102" attributes="0">
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Group type="102" attributes="0">
                                           <Component id="jLabel4_Simbolo_Colones_Regist_Atra_Admin" min="-2" max="-2" attributes="0"/>
                                           <EmptySpace max="-2" attributes="0"/>
-                                          <Component id="jTextField_Precio_Por_Perso_Regist_Atra_Admin" min="-2" pref="141" max="-2" attributes="0"/>
+                                          <Component id="txtPrecio" min="-2" pref="141" max="-2" attributes="0"/>
                                       </Group>
-                                      <Component id="jComboBox_Rango_Edad_Regist_Atra_Admin" min="-2" pref="64" max="-2" attributes="0"/>
+                                      <Component id="ddlRangoEdad" min="-2" pref="64" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                               </Group>
@@ -140,32 +140,32 @@
                   <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel_Nombre_Atraccion" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jTextField_Nombre_Atraccion_Registro_Atrac_Admin" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="txtNombreAtraccion" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jTextField_Ident_Atrac_Regist_Atra_Admin" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="txtCodigoAtraccion" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel_Identificador_Atraccion" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="1" attributes="0">
-                      <Component id="jDateChooser_Regist_Atra_Admin" min="-2" max="-2" attributes="0"/>
+                      <Component id="dtpFechaInstalacion" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel_Fecha_de_Instalacion" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jSlider1_Capacidad_Regist_Atra_Admin" min="-2" max="-2" attributes="0"/>
+                      <Component id="sldCapacidad" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel_Capacidad" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel_Sección" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jComboBox_Secc_Regist_Atra_Admin" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="ddlSeccion" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="jLabel_Rango_de_Edad_Permitido" min="-2" max="-2" attributes="0"/>
-                      <Component id="jComboBox_Rango_Edad_Regist_Atra_Admin" min="-2" max="-2" attributes="0"/>
+                      <Component id="ddlRangoEdad" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
@@ -175,7 +175,7 @@
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="jTextField_Precio_Por_Perso_Regist_Atra_Admin" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="txtPrecio" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="jLabel4_Simbolo_Colones_Regist_Atra_Admin" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
                           </Group>
                       </Group>
@@ -183,11 +183,11 @@
                   <EmptySpace pref="48" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="1" attributes="0">
-                          <Component id="jButton_Agregar_Atrac_Registro_Users" min="-2" max="-2" attributes="0"/>
+                          <Component id="btnAgregar" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="54" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="1" attributes="0">
-                          <Component id="jButton_volver_registro_atracciones_admin" min="-2" max="-2" attributes="0"/>
+                          <Component id="btnVolver" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="17" max="-2" attributes="0"/>
                       </Group>
                   </Group>
@@ -226,7 +226,7 @@
             <Property name="text" type="java.lang.String" value="Rango de edad permitido"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JButton" name="jButton_Agregar_Atrac_Registro_Users">
+        <Component class="javax.swing.JButton" name="btnAgregar">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/proyecto/images/agregar.png"/>
@@ -237,7 +237,7 @@
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
           </AuxValues>
         </Component>
-        <Component class="javax.swing.JButton" name="jButton_volver_registro_atracciones_admin">
+        <Component class="javax.swing.JButton" name="btnVolver">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/proyecto/images/previous1.png"/>
@@ -253,22 +253,22 @@
             <Property name="text" type="java.lang.String" value="Precio por persona"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="jTextField_Nombre_Atraccion_Registro_Atrac_Admin">
+        <Component class="javax.swing.JTextField" name="txtNombreAtraccion">
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
           </AuxValues>
         </Component>
-        <Component class="javax.swing.JTextField" name="jTextField_Ident_Atrac_Regist_Atra_Admin">
+        <Component class="javax.swing.JTextField" name="txtCodigoAtraccion">
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
           </AuxValues>
         </Component>
-        <Component class="com.toedter.calendar.JDateChooser" name="jDateChooser_Regist_Atra_Admin">
+        <Component class="com.toedter.calendar.JDateChooser" name="dtpFechaInstalacion">
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
           </AuxValues>
         </Component>
-        <Component class="javax.swing.JComboBox" name="jComboBox_Secc_Regist_Atra_Admin">
+        <Component class="javax.swing.JComboBox" name="ddlSeccion">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="3">
@@ -283,7 +283,7 @@
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
           </AuxValues>
         </Component>
-        <Component class="javax.swing.JComboBox" name="jComboBox_Rango_Edad_Regist_Atra_Admin">
+        <Component class="javax.swing.JComboBox" name="ddlRangoEdad">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="19">
@@ -314,7 +314,7 @@
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
           </AuxValues>
         </Component>
-        <Component class="javax.swing.JTextField" name="jTextField_Precio_Por_Perso_Regist_Atra_Admin">
+        <Component class="javax.swing.JTextField" name="txtPrecio">
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
           </AuxValues>
@@ -324,7 +324,7 @@
             <Property name="text" type="java.lang.String" value="&#x20a1;"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JSlider" name="jSlider1_Capacidad_Regist_Atra_Admin">
+        <Component class="javax.swing.JSlider" name="sldCapacidad">
           <Properties>
             <Property name="majorTickSpacing" type="int" value="20"/>
             <Property name="paintLabels" type="boolean" value="true"/>
@@ -397,7 +397,7 @@
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
           <SubComponents>
-            <Component class="javax.swing.JTable" name="jTable_Atracciones_Regist_Atra_Admin">
+            <Component class="javax.swing.JTable" name="tblAtracciones">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="7" rowCount="4">
