--- a/src/com/ulatina/grupo5/vista/Buscar_Atracciones_Admin.form
+++ b/src/com/ulatina/grupo5/vista/Buscar_Atracciones_Admin.form
@@ -48,7 +48,7 @@
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="jLabel_Fecha_Inst_Buscar_Atra_Admin" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Component id="jDateChooser1" min="-2" pref="192" max="-2" attributes="0"/>
+                          <Component id="txtFechaInstalacion" min="-2" pref="192" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="173" max="-2" attributes="0"/>
@@ -77,7 +77,7 @@
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
-                          <Component id="jDateChooser1" min="-2" pref="37" max="-2" attributes="0"/>
+                          <Component id="txtFechaInstalacion" min="-2" pref="37" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -122,9 +122,6 @@
         </Container>
         <Component class="javax.swing.JButton" name="jButton_Back_Buscar_Atrac_Admin">
           <Properties>
-            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="D:\ULATINA\4 CUATRI\PROGRA 3\Proyecto\Images\previous1.png"/>
-            </Property>
             <Property name="contentAreaFilled" type="boolean" value="false"/>
           </Properties>
           <AuxValues>
@@ -139,7 +136,10 @@
             <Property name="text" type="java.lang.String" value="Selecione la Fecha De Instalaci&#xf3;n"/>
           </Properties>
         </Component>
-        <Component class="com.toedter.calendar.JDateChooser" name="jDateChooser1">
+        <Component class="com.toedter.calendar.JDateChooser" name="txtFechaInstalacion">
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+          </AuxValues>
         </Component>
         <Component class="javax.swing.JButton" name="jButton_Ordernar_por_Seccion_Buscar_Atrac_Admin">
           <Properties>
