--- a/src/com/ulatina/grupo5/vista/Login.form
+++ b/src/com/ulatina/grupo5/vista/Login.form
@@ -67,10 +67,7 @@
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="1" attributes="0">
-              <Component id="jPanel2" max="32767" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
-          </Group>
+          <Component id="jPanel2" alignment="0" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
@@ -152,7 +149,7 @@
                       </Group>
                       <Component id="btnLogin" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="52" max="32767" attributes="0"/>
+                  <EmptySpace pref="58" max="32767" attributes="0"/>
                   <Component id="login" min="-2" max="-2" attributes="0"/>
               </Group>
           </Group>
